syntax = "proto3";

option csharp_namespace = "BonusBotConnector.Server";

service BBCommand {
  rpc UsedCommand (UsedCommandRequest) returns (UsedCommandReply);
}

message UsedCommandRequest {
    uint64 userId = 1;
    string command = 2;
    repeated string args = 3;
}

message UsedCommandReply {
    string message = 1;
}
